--- a/index.html
+++ b/index.html
@@ -6,61 +6,60 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="block">
-            <div class="upper_part">
-                <div id="header">
-                    <ul>
-                        <li>Header logo</li>
-                        <li>header link one</li>
-                        <li>header link two</li>
-                        <li>header link three</li>
-                    </ul>
-                </div>
-                <div class="upper_block">
-                    <div>
-                        <div>This website is awesome</div>
-                        <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                    </div> 
-                    <div>this is a placeholder for an image</div>
-                </div>
+        <div id="header">
+            <div>Header logo</div>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link 3</li>
+            </ul>
+        </div>
+        <div id="upper_part">
+            <div id="upper_block">
+                <div id="up_bl_left">
+                    <div id="up_bl_title">This website is awesome</div>
+                    <div style="font-size: 18px; color: #e5e7eb;">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                    <button>Sign up!</button>
+                </div> 
+                <div id="holder">this is a placeholder for an image</div>
             </div>
-            <div class="middle_part_1">
-                <div id="2nd_block_title">Some random information</div>
-                <div id="2nd_block_tiles">
-                    <div>
-                        <div class="square">
-                            <span>this is some subtext under an illustration or image</span>
-                        </div>
-                        <div class="square">
-                            <span>this is some subtext under an illustration or image</span>
-                        </div>
-                        <div class="square">
-                            <span>this is some subtext under an illustration or image</span>
-                        </div>
-                        <div class="square">
-                            <span>this is some subtext under an illustration or image</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="middle_part_2">
-                <p>This is an inspiration quote, or a testimonial from a customer.Maybe it's just filling up space, pr maube people actually read it. Who know? All I know is that it looks nice.</p>
-                <p>-Thor, God of thunder</p>
-            </div>
-            <div class="lower_part">
+        </div>
+        <div id="middle_part_1">
+            <div id="mid_block_title">Some random information</div>
+            <div id="squares">
                 <div>
-                    <div class="left_part">
-                        <span>Call to action! It's time!</span>
-                        <span>Sign up for our production by clicking that button over there!</span>
-                    </div>
-                    <div class="right_part">
-                        <button>Sign up</button>
-                    </div>
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
                 </div>
-                <div id="footer">
-                    <span>Copyright The Odin Project 2022</span>
+                <div>
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
                 </div>
+                <div>
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
+                </div>
+                <div>
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
+                </div>                 
             </div>
+        </div>
+        <div id="middle_part_2">
+            <p class="quote">This is an inspiration quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people actually read it. Who know? All I know is that it looks nice.</p>
+            <p class="quote_author">-Thor, God of thunder</p>
+        </div>
+        <div id="lower_part">
+            <div class="left_part">
+                <span>Call to action! It's time!</span>
+                <span>Sign up for our production by clicking that button over there!</span>
+            </div>
+            <div class="right_part">
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div id="footer">
+            <span>Copyright The Odin Project 2022</span>
         </div>
     </body>
 </html>
