To a much better (re)start
* much cleaner and structured code

--- a/index.html
+++ b/index.html
@@ -6,60 +6,29 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div id="header">
-            <div>Header logo</div>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link 3</li>
-            </ul>
-        </div>
-        <div id="upper_part">
-            <div id="upper_block">
-                <div id="up_bl_left">
-                    <div id="up_bl_title">This website is awesome</div>
-                    <div style="font-size: 18px; color: #e5e7eb;">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                    <button>Sign up!</button>
-                </div> 
-                <div id="holder">this is a placeholder for an image</div>
+        <div class="container header">
+            <div class="header">
+                Header logo
+            </div>
+            <div class="links">
+                <span>header link</span>
+                <span>header link</span>
+                <span>header link</span>
             </div>
         </div>
-        <div id="middle_part_1">
-            <div id="mid_block_title">Some random information</div>
-            <div id="squares">
-                <div>
-                    <div class="square"></div>
-                    <span>this is some subtext under an illustration or image</span>
-                </div>
-                <div>
-                    <div class="square"></div>
-                    <span>this is some subtext under an illustration or image</span>
-                </div>
-                <div>
-                    <div class="square"></div>
-                    <span>this is some subtext under an illustration or image</span>
-                </div>
-                <div>
-                    <div class="square"></div>
-                    <span>this is some subtext under an illustration or image</span>
-                </div>                 
+        <div class="container one">
+            <div class="block left">
+                <span>This website is awesome</span>
+                <span>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</span>
+                <button class="button">Sign up</button>
+            </div>
+            <div class="block right">
+                <span>this is a placeholder for an image</span>
             </div>
         </div>
-        <div id="middle_part_2">
-            <p class="quote">This is an inspiration quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people actually read it. Who know? All I know is that it looks nice.</p>
-            <p class="quote_author">-Thor, God of thunder</p>
-        </div>
-        <div id="lower_part">
-            <div class="left_part">
-                <span>Call to action! It's time!</span>
-                <span>Sign up for our production by clicking that button over there!</span>
-            </div>
-            <div class="right_part">
-                <button>Sign up</button>
-            </div>
-        </div>
-        <div id="footer">
-            <span>Copyright The Odin Project 2022</span>
-        </div>
+        <div class="container two"></div>
+        <div class=" container three"></div>
+        <div class="container four"></div>
+        <div class="container footer"></div>
     </body>
 </html>
