99% done. One day. This is addictive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="container one">
             <div class="block left">
-                <span>This website is awesome</span>
+                <span class="container-one-title">This website is awesome</span>
                 <span>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</span>
                 <button class="button">Sign up</button>
             </div>
@@ -26,9 +26,47 @@
                 <span>this is a placeholder for an image</span>
             </div>
         </div>
-        <div class="container two"></div>
-        <div class=" container three"></div>
-        <div class="container four"></div>
-        <div class="container footer"></div>
+        <div class="container two">
+            <div id="container-2-title">Some information</div>
+            <div class="horror-squares">
+                <div class="block">
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
+                </div>
+                <div class="block">
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
+                </div>
+                <div class="block">
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
+                </div>
+                <div class="block">
+                    <div class="square"></div>
+                    <span>this is some subtext under an illustration or image</span>
+                </div>
+            </div>
+        </div>
+        <div class=" container three">
+            <p class="block quote">This is an inspiration quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people actually read it. Who know? All I know is that it looks nice.</p>
+            <p class="block quote_author">-Thor, God of thunder</p>
+        </div>
+        <div class="container four">
+            <div class="container unique">
+                <div class="block">
+                    <span style="font-weight: bolder;">Call to action! It's time!</span>
+                    <span>Sign up for our production by clicking that button over there!</span>
+                </div>
+                <div class="block">
+                    <button 
+                    class="button" 
+                    style="border: solid; 
+                    border-color:white; border-width: thin;">
+                    Sign up
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="container footer">Copyright &#169; The Odin Project 2022</div>
     </body>
 </html>
