Final push. Minor tweaks. Landing page done

--- a/index.html
+++ b/index.html
@@ -53,15 +53,19 @@
         </div>
         <div class="container four">
             <div class="container unique">
-                <div class="block">
-                    <span style="font-weight: bolder;">Call to action! It's time!</span>
+                <div class="block" 
+                style="flex:2; padding-left: 100px;">
+                    <span 
+                    style="font-weight: bolder; 
+                    font-size: 24px;">Call to action! It's time!</span>
                     <span>Sign up for our production by clicking that button over there!</span>
                 </div>
-                <div class="block">
+                <div class="block" style="flex:1;">
                     <button 
                     class="button" 
                     style="border: solid; 
-                    border-color:white; border-width: thin;">
+                    border-color:white; 
+                    border-width: thin;">
                     Sign up
                     </button>
                 </div>
